--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,9 @@ repos:
       additional_dependencies:
         - flake8-builtins
         - flake8-comprehensions
+        - flake8-copyright
         - flake8-docstrings
+        - flake8-ownership
         - flake8-pytest
         - flake8-rst-docstrings
         - pep8-naming
