Update how the package is setup and tested as part of ci

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,5 @@ ignore = W503
 max-line-length = 88
 docstring-convention = numpy
 select = C,E,W,T4,B9,F,D,A,N,RST,B
+# current max complexity -- might want to make this smaller in the future
+max-complexity = 16
